--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3-scale": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.27.5",
     "react-h5-audio-player": "^3.9.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
